* Lei now has some more interactions, written by Del
* Asche has a new task (buy-in 1500 coin), with a unique sex scene at the end. Written by the Observer
* Asche has two new magic talks. They require some story progression, plus you finishing task 2 and 3 respectively

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4i
------------
* Fixed a bunch of bugs and typos.
* Added new effects to a bunch of TF items. Among other things:
 - Adjusting femininity
 - Adjusting muscle tone (not widely used atm)
 - Adjusting hip size
 - More stat adjustments
* Added more TF items (can't really get them anywhere yet)
 - Caprinium: Goat
 - Cerventine: Deer
 - Honey brew: Bee
 - Androgyn: Trappy TF
* Added some minor scenes for picking up ingredients.
* Most TF items and ingredients now have more than one source; several mobs has had new items added to their drop tables (low odds).
* Removed the tongue length variable (which really wasn't used anywhere, and there was no way to change it). Tongue length will be set by tongue race type from now on.
* Tongue type added to several TFs
* Added the final of the trio of Terry "Have a Drink" scenes. Requires that Terry has a pussy. Written by QB & LD.
* Added a new character, Vaughn, to the Outlaws. Written by The Observer.
 - You must have completed "Outlaws path into Rigard" and Krawitz to unlock him
 - He has some talk options
 - If you have big tits, you can give him a titfuck
 - He can send you on tasks. Currently only two available
* Added a fallback font for systems where the regular button font isn't available (thanks coladict on github!)
* Added a new way of doing save to file that should work for offline play! Tested and works for Chrome and Firefox, I make no promises for IE (thanks coladict on github!)

Version 0.4h
------------
* Bashed a whole lot of bugs and typos.
* Tweaked some stuff in Maria dead drops regarding party.