@@ -17,6 +17,7 @@ Version 0.4j
 * Lei now has some more interactions, written by Del
 * Asche has a new task (buy-in 1500 coin), with a unique sex scene at the end. Written by the Observer
 * Asche has two new magic talks. They require some story progression, plus you finishing task 2 and 3 respectively
+* Asche will now let you reach into her magic box (heh), for a fee. It's a money sink, but there's at least one item you can get here that's very powerful
 
 --------------------------------------------
              PREVIOUS VERSIONS
